# shogiAI

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  convert_dos2unix.sh  get_datas.sh  mcts_player.bat  mcts_player.sh  mcts_player_cube_root_ubuntsu.sh  mcts_player_kiki.bat  mcts_player_kiki_ubuntsu.sh  mcts_player_small.bat  mcts_player_small_ubuntsu.sh  mcts_player_soft_sin.bat  mcts_player_soft_sin_ubuntsu.sh  mcts_player_squash_two.bat  mcts_player_squash_two_ubuntsu.sh  mcts_player_ubuntsu.sh  pyproject.toml  setup.sh
_prev/network/: policy_value_network.py
_prev/player/: base_player.py  onnx_player.py
_prev/uct/: dataloader.py  features.py  train.py
app/: main.py
app/domain/: activation_function.py  features.py  moves.py  policy_value_network.py  uct_node.py
app/infrastructure/: dataloader.py  directory.py
app/interfaces/: cli.py  logger.py
app/usecases/: base_player.py  mcts_player.py  onnx_player.py  test.py  train.py
network/: policy_value_network.py
player/: mcts_player.py
uct/: dataloader.py  features.py  train.py
utils/: csa_to_hcpe.py  kif_to_hcpe.py  torch_gpu_check.py
