[project]
name = "shogiai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cshogi>=0.8.8",
    "mypy>=1.15.0",
    "onnxruntime>=1.20.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
    "torch>=2.6.0",
    "typer>=0.15.2",
]

[tool.ruff]
line-length = 120  # 1行の最大長
target-version = "py311"  # 使用するPythonのバージョン
exclude = ["_prev"]

[tool.mypy]
# 基本設定
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# サードパーティライブラリの型チェック
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cshogi"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "onnxruntime"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "cshogi.dlshogi"
ignore_missing_imports = true
